--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ block content
   h1= title
   p Welcome to #{title}
   h2 Messages:
+  a(href='/new') Add new
   ul 
     each message in messages
       li
